マニュアル

--- a/スペック.md
+++ b/スペック.md
@@ -61,3 +61,63 @@ echo '/swap swap swap defaults 0 0' | sudo tee -a /etc/fstab
 [1]: https://docs.gitlab.com/omnibus/settings/memory_constrained_envs/?utm_source=chatgpt.com "Running GitLab in a memory-constrained environment"
 [2]: https://docs.gitlab.com/install/requirements/?utm_source=chatgpt.com "GitLab installation requirements"
 [3]: https://gitlab.com/gitlab-org/gitlab-foss/-/blob/v17.0.0/doc/install/requirements.md?utm_source=chatgpt.com "doc/install/requirements.md · v17.0.0 · undefined - GitLab"
+
+下記をそのまま **運用マニュアル** に貼り付ければ、「GitLab ＋ Docker ＋同居 Runner を EC2 で立てたいときの最小～実用スペック一覧」とその根拠がまとまります。Markdown で整形済みです。
+
+---
+
+## 1. 公式要件と“縮小運用”の境界
+
+| 公式ドキュメント         | 内容                                                                                                          | 実務での意味                           |
+| ------------------------ | ------------------------------------------------------------------------------------------------------------- | -------------------------------------- |
+| **通常要件**             | _最大 20 RPS or 1,000 ユーザ_ までなら **16 GB RAM 推奨／8 GB 最低**([docs.gitlab.com][1])                    | 本番を想定するなら 8 GB が事実上の下限 |
+| **メモリ制約環境ガイド** | **2 GB RAM ＋ 1 GB SWAP** でも _個人～ 5 名・リポジトリ ≤100 MB_ なら動く（機能を削減）([docs.gitlab.com][2]) | 「まず触ってみる」検証用の超軽量構成   |
+
+---
+
+## 2. 推奨 EC2 インスタンス早見表（Docker + GitLab + 同居 Runner）
+
+| 想定規模 / 用途                           | インスタンス例 | vCPU | RAM       | 永続 EBS 目安 | 同時 Runner ジョブ | 備考                                                                            |
+| ----------------------------------------- | -------------- | ---- | --------- | ------------- | ------------------ | ------------------------------------------------------------------------------- |
+| **評価・個人**<br>5 ユーザ以下 / 小テスト | `t3.small`     | 2    | **2 GiB** | 20 GB         | 1                  | 2 GB + SWAP でギリ動作（遅い）｜ AWS 表で 2 GiB([docs.aws.amazon.com][3])       |
+| **PoC & 軽量 CI**<br>小チーム (\~5 人)    | `t3.medium`    | 2    | **4 GiB** | 30–50 GB      | 1–2                | 体感的に快適になる最小ライン｜ 4 GiB([docs.aws.amazon.com][3])                  |
+| **小規模運用**<br>10–20 人 / 並列 CI 2–3  | `t3.large`     | 2    | **8 GiB** | 50 GB+        | 2–3                | 公式「8 GB 最低」に一致｜ 8 GiB([docs.aws.amazon.com][3], [docs.gitlab.com][1]) |
+
+> **注意**：t 系は CPU クレジット枯渇で性能が落ちるため
+> 長時間ビルドが多い場合は **`t3.unlimited`** を有効化するか
+> 定常性能の **m 系**（例：`m7i.large` 16 GiB）に切り替えてください。
+
+---
+
+## 3. ストレージ指針
+
+- GitLab 本体インストールに **約 2.5 GB**、リポジトリ分は別途確保([docs.gitlab.com][1])
+- 小規模でも **gp3 30 GB**（IOPS 3,000）を最低ラインに。
+- 速度重視なら **gp3 + SSD 系** を推奨。
+
+---
+
+## 4. さらに容量を抑えるワザ（2 – 4 GiB 構成向け）
+
+| 軽量化項目                      | 設定例                                                          |
+| ------------------------------- | --------------------------------------------------------------- |
+| **SWAP 1 GiB**                  | `fallocate -l 1G /swap && mkswap /swap && swapon /swap`         |
+| **Puma 単プロセス化**           | `puma['worker_processes'] = 0`([docs.gitlab.com][2])            |
+| **Sidekiq concurrency 10 以下** | `sidekiq['concurrency'] = 10`([docs.gitlab.com][2])             |
+| **Prometheus 無効化**           | `prometheus_monitoring['enable'] = false`([docs.gitlab.com][2]) |
+
+---
+
+### まとめ（添削不要で貼れる TL;DR）
+
+> - **検証だけ**なら `t3.small`（2 GiB ＋ SWAP）で起動可。
+> - **実用の最小**は `t3.medium`（4 GiB）。
+> - **公式下限**8 GiB、推奨 16 GiB（`t3.large` 以上）。
+> - 2 – 4 GiB で回すなら **swap 追加＋ Puma/Sidekiq 削減**で安定。
+> - ストレージは **gp3 30 GB 以上**、I/O が命。
+
+この表と根拠リンクを添えれば、マニュアルの「サーバー要件」ページを完結に書けます。
+
+[1]: https://docs.gitlab.com/install/requirements/ "GitLab installation requirements | GitLab Docs"
+[2]: https://docs.gitlab.com/omnibus/settings/memory_constrained_envs/ "Running GitLab in a memory-constrained environment | GitLab Docs"
+[3]: https://docs.aws.amazon.com/ec2/latest/instancetypes/gp.html "Specifications for Amazon EC2 general purpose instances - Amazon EC2"
