--- a/マニュアル.md
+++ b/マニュアル.md
@@ -2470,3 +2470,63 @@ Web UI の管理画面から：
 なども組み込んだ `docker-compose.yml` の拡張例もご案内できます。
 
 必要に応じてお知らせください！
+
+### GitLab ロール別 ★ 星取表（主要プロジェクト権限の抜粋）
+
+| 権限 / ロール                                        | Guest | Planner | Reporter | Developer | Maintainer | Owner |
+| ---------------------------------------------------- | :---: | :-----: | :------: | :-------: | :--------: | :---: |
+| **ソースコード閲覧 / Clone**                         |   ★   |    ★    |    ★     |     ★     |     ★      |   ★   |
+| **非保護ブランチ Push**                              |  －   |   －    |    －    |     ★     |     ★      |   ★   |
+| **保護ブランチ管理**<br>(Push / 削除 / 保護設定変更) |  －   |   －    |    －    |    －     |     ★      |   ★   |
+| **Issue 作成**                                       |   ★   |    ★    |    ★     |     ★     |     ★      |   ★   |
+| **Merge Request 作成**                               |  －   |   －    |    ★     |     ★     |     ★      |   ★   |
+| **Release 管理**                                     |  －   |   －    |    －    |     ★     |     ★      |   ★   |
+| **CI/CD パイプライン実行**                           |  －   |   －    |    －    |     ★     |     ★      |   ★   |
+| **プロジェクト設定変更**                             |  －   |   －    |    －    |    －     |     ★      |   ★   |
+| **メンバー管理**                                     |  －   |   －    |    －    |    －     |     ★      |   ★   |
+| **プロジェクト削除**                                 |  －   |   －    |    －    |    －     |     －     |   ★   |
+
+**凡例**
+
+- **★** = 権限あり
+- **－** = 権限なし（あるいは上位ロールに限定）
+
+> **Owner** は常にすべての操作が可能です。Planner ロール（GitLab 17.7 で追加）は主にプロジェクト計画機能に限った権限を持ち、コード操作や設定変更は行えません。
+
+---
+
+#### 参考にした公式ドキュメントの主な該当箇所
+
+- **コード閲覧 / Push / protected branch 管理** – リポジトリ権限表
+- **Issue / MR** – プロジェクト計画・MR 権限表
+- **Release / 設定変更 / プロジェクト削除** – プロジェクト機能権限表
+- **CI/CD 実行** – CI/CD 権限表
+- **メンバー管理** – ユーザー管理権限表
+
+([docs.gitlab.com][1], [docs.gitlab.com][1], [docs.gitlab.com][1], [docs.gitlab.com][1])
+
+[1]: https://docs.gitlab.com/user/permissions/ "Roles and permissions | GitLab Docs"
+
+はい、**「メンバー管理」には “ユーザーを追加・削除し、ロール（アクセスレベル）を変更する” 作業も含まれます**。
+
+| スコープ         | ロール                                 | できること                                                                        | 制限・補足                                                                                                                                 |
+| ---------------- | -------------------------------------- | --------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------ |
+| **プロジェクト** | **Maintainer**                         | _メンバーを招待／削除_<br>_既存メンバーのロールを Guest〜Maintainer の範囲で変更_ | - **Owner ロールの付与・削除は不可**<br>- Owner からの降格や Owner への昇格、Owner へのアクセス要求の承認はできない ([docs.gitlab.com][1]) |
+|                  | **Owner**                              | 上記に加え、**Owner ロールそのものを含むすべてのロール操作が可能**                | プロジェクトの最上位権限                                                                                                                   |
+|                  | Guest / Planner / Reporter / Developer | メンバー管理権限なし                                                              |                                                                                                                                            |
+
+| スコープ                                   | ロール          | できること                                             | 制限・補足                                                             |
+| ------------------------------------------ | --------------- | ------------------------------------------------------ | ---------------------------------------------------------------------- |
+| **グループ（トップレベル／サブグループ）** | **Owner**       | _メンバーの招待・削除_<br>_ロール変更（Owner を含む）_ | **メンバーのロールを変更できるのは Owner のみ** ([docs.gitlab.com][2]) |
+|                                            | Maintainer 以下 | **メンバー管理は不可**                                 | （サブグループ作成など一部管理は可能だが、メンバー権限は変更不可）     |
+
+### まとめ
+
+- **プロジェクトレベル**では Maintainer までが “チームメンバー管理” を実行できます。ただし Owner ロールの扱いだけは Owner 自身（またはインスタンス管理者）に限られます。
+- **グループレベル**では **Owner だけ** がメンバーを直接操作でき、Maintainer には権限がありません。
+- 個別の GitLab インスタンスやグループ設定で「メンバーは新しいユーザーやグループを招待できない」などの制限をかけている場合、上表よりさらに権限が絞られることがあります（Settings ▸ Permissions & group features で設定可能）。
+
+このように “メンバー管理” の実体は **「招待・削除・ロール変更」** であり、どのロールまで操作できるかは Maintainer と Owner で明確に線引きされています。
+
+[1]: https://docs.gitlab.com/user/permissions/ "Roles and permissions | GitLab Docs"
+[2]: https://docs.gitlab.com/user/group/subgroups/ "Subgroups | GitLab Docs"
