--- a/マニュアル.md
+++ b/マニュアル.md
@@ -2530,3 +2530,155 @@ Web UI の管理画面から：
 
 [1]: https://docs.gitlab.com/user/permissions/ "Roles and permissions | GitLab Docs"
 [2]: https://docs.gitlab.com/user/group/subgroups/ "Subgroups | GitLab Docs"
+
+### GitLab ロール別 ★ 星取表（**Private プロジェクト** を想定）
+
+| 権限 / ロール                                            | Guest | Planner | Reporter | Developer | Maintainer | Owner |
+| -------------------------------------------------------- | :---: | :-----: | :------: | :-------: | :--------: | :---: |
+| **ソースコード clone**                                   |  －   |   －    |    ★     |     ★     |     ★      |   ★   |
+| **非保護ブランチ Push**                                  |  －   |   －    |    －    |     ★     |     ★      |   ★   |
+| **保護ブランチの管理**<br>(保護設定変更・直接 Push/削除) |  －   |   －    |    －    |    －     |     ★      |   ★   |
+| **Issue 作成**                                           |   ★   |    ★    |    ★     |     ★     |     ★      |   ★   |
+| **Merge Request 作成**                                   |  －   |   －    |    －    |     ★     |     ★      |   ★   |
+| **Release 作成 / 更新 / 削除**                           |  －   |   －    |    －    |     ★     |     ★      |   ★   |
+| **CI/CD パイプライン実行**                               |  －   |   －    |    －    |     ★     |     ★      |   ★   |
+| **プロジェクト設定変更**                                 |  －   |   －    |    －    |    －     |     ★      |   ★   |
+| **メンバー招待・ロール変更**                             |  －   |   －    |    －    |    －     |    ★\*     |   ★   |
+| **プロジェクト削除**                                     |  －   |   －    |    －    |    －     |     －     |   ★   |
+
+**凡例**
+
+- ★ = 権限あり
+- － = 権限なし
+- ★\* = Maintainer も「Owner ロールの付与・削除」だけは不可
+
+#### 主な根拠
+
+- **clone** – _Reporter 以上が可能_ ([docs.gitlab.com][1])
+- **Push（非保護）** – _Developer は default ブランチが「Partially/Not protected」なら push 可_ ([docs.gitlab.com][2])
+- **保護ブランチ管理** – _保護ブランチの作成・設定変更は Maintainer 以上_ ([docs.gitlab.com][3])
+- **Issue 作成 (Guest 以上)** – _Issue board から作成できる最小ロールは Guest_ ([docs.gitlab.com][4])
+- **Merge Request 作成** – _MR 作成には Developer 以上が必要_ ([docs.gitlab.com][5])
+- **Release 操作** – _API では “Developer level access is required to create a release”_ ([docs.gitlab.com][6])
+- **CI/CD 実行** – _「Run CI/CD pipeline」権限は Developer 以上_ ([docs.gitlab.com][7])
+- **プロジェクト設定変更** – _「Edit project settings」= Maintainer 以上_ ([docs.gitlab.com][2])
+- **メンバー管理** – _Maintainer は Guest〜Maintainer のロール操作可 / Owner 操作は Owner のみ_ ([docs.gitlab.com][1])
+- **プロジェクト削除** – _削除には Owner ロール必須_ ([docs.gitlab.com][8])
+
+#### 注意点・補足
+
+1. **Public / Internal** プロジェクトでは Guest や非メンバーでも clone 可能です。上表は _Private_ を前提にしています。
+2. ブランチ保護設定を緩めれば Developer でも default ブランチへ push 可ですが、保護を解除できるのは Maintainer 以上です。
+3. **Planner** は計画系（Issue／Task／OKR など）の操作権限が追加されたロールで、コード操作は Guest と同等です。
+4. **Custom Roles** を用いれば「Guest でも clone だけ許可」のような細かい権限付与が可能です。
+
+これで「Guest でも clone 可能」と誤っていた箇所を修正した最新版の星取表になりました。
+
+[1]: https://docs.gitlab.com/user/project/members/ "Members of a project | GitLab Docs"
+[2]: https://docs.gitlab.com/user/permissions/?utm_source=chatgpt.com "Roles and permissions - GitLab Docs"
+[3]: https://docs.gitlab.com/user/project/repository/branches/protected/?utm_source=chatgpt.com "Protected branches - GitLab Docs"
+[4]: https://docs.gitlab.com/user/project/issues/create_issues/?utm_source=chatgpt.com "Create an issue - GitLab Docs"
+[5]: https://docs.gitlab.com/user/project/merge_requests/creating_merge_requests/ "Creating merge requests | GitLab Docs"
+[6]: https://docs.gitlab.com/api/releases/?utm_source=chatgpt.com "Project release API - GitLab Docs"
+[7]: https://docs.gitlab.com/user/permissions/ "Roles and permissions | GitLab Docs"
+[8]: https://docs.gitlab.com/user/project/working_with_projects/?utm_source=chatgpt.com "Manage projects - GitLab Docs"
+
+### GitLab 権限・操作早見表（**Private プロジェクト** 基準）
+
+| 操作 / 権限                  | Guest | Planner | Reporter | Developer | Maintainer | Owner |
+| ---------------------------- | :---: | :-----: | :------: | :-------: | :--------: | :---: |
+| **リポジトリ閲覧 / Clone**   |  －   |   －    |    ★     |     ★     |     ★      |   ★   |
+| **非保護ブランチへ Push**    |  －   |   －    |    －    |    ★¹     |     ★      |   ★   |
+| **保護ブランチ設定・解除**   |  －   |   －    |    －    |    －     |     ★²     |   ★   |
+| **Issue / Task 作成**        |   ★   |    ★    |    ★     |     ★     |     ★      |   ★   |
+| **Merge Request 作成**       |  －   |   －    |    －    |    ★³     |     ★      |   ★   |
+| **Release 作成・更新**       |  －   |   －    |    －    |    ★⁴     |     ★      |   ★   |
+| **CI/CD パイプライン実行**   |  －   |   －    |    －    |    ★⁵     |     ★      |   ★   |
+| **プロジェクト設定変更**     |  －   |   －    |    －    |    －     |     ★⁶     |   ★   |
+| **メンバー招待・ロール変更** |  －   |   －    |    －    |    －     |    ★\*     |   ★   |
+| **プロジェクト削除**         |  －   |   －    |    －    |    －     |     －     |  ★⁷   |
+
+**凡例**
+★ = 操作可能  | － = 不可  | ★\* = Maintainer は Owner の付与・取り消しのみ不可
+
+---
+
+#### 1 行ずつの根拠
+
+| №                                                                                                             | 主な根拠ドキュメント |
+| ------------------------------------------------------------------------------------------------------------- | -------------------- |
+| 1. Developer は default ブランチ保護が _Partially_／_Not protected_ の場合のみ Push 可 ([docs.gitlab.com][1]) |                      |
+| 2. 保護ブランチの作成・設定変更には Maintainer 以上が必要 ([docs.gitlab.com][2], [docs.gitlab.com][2])        |                      |
+| 3. Merge Request を作成するには Developer 以上が必要 ([docs.gitlab.com][3])                                   |                      |
+| 4. Release 操作には Developer 以上が必要 ([docs.gitlab.com][4], [docs.gitlab.com][5])                         |                      |
+| 5. MR パイプライン・スケジュール実行など CI/CD は Developer 以上 ([docs.gitlab.com][6], [docs.gitlab.com][7]) |                      |
+| 6. 「Edit project settings」は Maintainer 以上 ([docs.gitlab.com][1])                                         |                      |
+| 7. プロジェクト削除は Owner 必須 ([docs.gitlab.com][8])                                                       |                      |
+
+> **Planner ロール**（GitLab 17.7 で追加）
+> Issue・OKR など計画系ワークアイテムを Guest より広く操作できますが、コード／CI／設定系の権限は Guest と同等です。([docs.gitlab.com][1])
+
+---
+
+### メンバー管理権限
+
+| スコープ         | 操作できるロール   | 実行者に必要なロール | 備考                                   |
+| ---------------- | ------------------ | -------------------- | -------------------------------------- |
+| **プロジェクト** | Guest〜Maintainer  | **Maintainer**       | Maintainer は Owner の昇格・降格は不可 |
+|                  | Owner を含むすべて | **Owner**            | 最上位権限                             |
+| **グループ**     | すべて             | **Owner**            | Maintainer ではメンバー管理不可        |
+
+([docs.gitlab.com][9], [docs.gitlab.com][9])
+
+---
+
+### 保護ブランチとは？
+
+- **目的**: 誤 push／force-push／削除から重要ブランチを守るガードレール
+- **主な設定項目**
+
+  - _Allowed to push / merge / force-push_（ロール・個別ユーザー・グループを指定）
+  - _Code Owner 承認必須_
+  - _ブランチ削除禁止_
+
+- **既定**: プロジェクトの default ブランチは自動で保護状態。Maintainer 以上のみが push / merge 可。
+- **設定場所**: **Settings ▸ Repository ▸ Protected branches**
+
+([docs.gitlab.com][2], [docs.gitlab.com][2])
+
+---
+
+### Clone 可否と可視性の関係
+
+| プロジェクト可視性 | Guest の Clone 権限      |
+| ------------------ | ------------------------ |
+| **Private**        | × 不可                   |
+| **Internal**       | ○ 認証ユーザーとして可能 |
+| **Public**         | ○ 匿名でも可能           |
+
+([docs.gitlab.com][10])
+※Private プロジェクトで Guest にコード閲覧だけ許可したい場合は **Custom Role** で _View repository code_ 権限を付与する方法があります。([docs.gitlab.com][11])
+
+---
+
+#### まとめ
+
+- **Guest** は Private プロジェクトのコードには触れられません。Reporter から閲覧・clone が可能。
+- **Developer** は「開発作業」一式（push／MR／CI／Release）を担当。Default branch を守りたい場合は保護ブランチと組み合わせてガバナンスを取ります。
+- **Maintainer** は設定・メンバー管理・保護ブランチ制御など「運用」レベルを扱う役割。
+- **Owner** はプロジェクトライフサイクル全体（削除・完全なロール操作）を司る最上位。
+- **Planner** はコード操作を伴わない“計画専用”権限。
+
+この一覧をベースに、自組織のワークフローやセキュリティ要件に応じて **保護ブランチ** と **カスタムロール** を組み合わせると、最小権限の原則を保ちながら柔軟な運用が可能になります。
+
+[1]: https://docs.gitlab.com/user/permissions/?utm_source=chatgpt.com "Roles and permissions - GitLab Docs"
+[2]: https://docs.gitlab.com/user/project/repository/branches/protected/?utm_source=chatgpt.com "Protected branches - GitLab Docs"
+[3]: https://docs.gitlab.com/user/project/merge_requests/creating_merge_requests/?utm_source=chatgpt.com "Creating merge requests - GitLab Docs"
+[4]: https://docs.gitlab.com/user/project/releases/?utm_source=chatgpt.com "Releases - GitLab Docs"
+[5]: https://docs.gitlab.com/api/releases/?utm_source=chatgpt.com "Project release API - GitLab Docs"
+[6]: https://docs.gitlab.com/ci/pipelines/merge_request_pipelines/?utm_source=chatgpt.com "Merge request pipelines - GitLab Docs"
+[7]: https://docs.gitlab.com/ci/pipelines/schedules/?utm_source=chatgpt.com "Scheduled pipelines - GitLab Docs"
+[8]: https://docs.gitlab.com/user/project/working_with_projects/?utm_source=chatgpt.com "Manage projects - GitLab Docs"
+[9]: https://docs.gitlab.com/user/project/members/?utm_source=chatgpt.com "Members of a project - GitLab Docs"
+[10]: https://docs.gitlab.com/user/public_access/?utm_source=chatgpt.com "Project and group visibility - GitLab Docs"
+[11]: https://docs.gitlab.com/administration/guest_users/?utm_source=chatgpt.com "Guest users - GitLab Docs"
