問い合わせ

--- a/配布.md
+++ b/配布.md
@@ -273,3 +273,4 @@ terraform/
      ユーザーの MyGroup 配下に複製 → Pipeline 自動起動
 
 > **「Clone → Push したらテストも Kanban も動く」** 体験だけで、現場の DevOps 温度が一気に上がります 😊
+> 本ガイドに関するご質問や GitLab パッケージの取得については、付録 D「お問い合わせ・サポート窓口」をご参照ください。
